--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <div>WebStudio</div>
+            <a href="WebStudio">WebStudio</a>
             <nav>
                 <a href="Agencja">Agencja</a>
                 <a href="Portfolio">Portfolio</a>
@@ -85,7 +85,7 @@
 
         </main>
         <footer>
-            WebStudio
+            <a href="WebStudio"></a>
             <address>
             m. Warszawa, Aleje Jerozolimskie 21
             <a href="mail:info@example.com"> info@example.com></a>
