--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         </main>
         <footer>
-            <a href="WebStudio"></a>
+            <a href="WebStudio">WebStudio</a>
             <address>
             m. Warszawa, Aleje Jerozolimskie 21
             <a href="mail:info@example.com"> info@example.com></a>
