--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     "294">
                 </li>
             </ul>
+            </section>
             <section>
              <h2>Nasz zespół</h2>
              <ul>
