--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
 
         </header>
         <main>
-            <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU </h1>
+            <section>
+                <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU </h1>
          
             <button type="button">Zamów usługe</button>
+        </section>
             <ul>
                 <li><h3>LOREM IPSUM</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
                 <li><h3>LOREM IPSUM</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
                 <li><h3>LOREM IPSUM</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
                 <li><h3>LOREM IPSUM</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
             </ul>
-            <section><h2>Czym się zajmujemy</h2>
+            <section>
+            <h2>Czym się zajmujemy</h2>
             <ul>
                 <li>
                     <img src="images/img1.jpg" alt="Praca przy laptopie" 
