--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header>
       <a href="WebStudio">WebStudio</a>
       <nav>
-        <a href="Agencja">Agencja</a>
-        <a href="Portfolio">Portfolio</a>
-        <a href="Kontakt">Kontakt</a>
+        <ul>
+          <li><a href="Agencja">Agencja</a></li>
+          <li><a href="Portfolio">Portfolio</a></li>
+          <li><a href="Kontakt">Kontakt</a></li>
+        </ul>
       </nav>
       <a href="mail:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+48111111111">+48 111 111 111</a>
