--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="John Doe" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-    <title>GoIT</title>
+    <title>Studio</title>
   </head>
   <body>
     <header>
